--- a/index.html
+++ b/index.html
@@ -370,7 +370,9 @@
     <h2 class="w3-wide w3-center">Documentos de apoyo</h2>
     <p class="w3-opacity w3-center"><i></i></p>
     <iframe width="700" height="400" src="https://www.youtube.com/embed/orJSJGHjBLI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
+    <p class="w3-opacity w3-center"><i>*</i></p>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQrP71lV5q5A-KnHawPXF6DNvbOqi6-LsE2p_c-eZHcH0wdWNaReYVEZcFaAKTnuKfQsE55s91Hjg86/embed?start=false&loop=false&delayms=3000" frameborder="0" width="700" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+   </div>
 
   <!-- End Page Content -->
   </div>
