añadido ppt y video link
añadido ppt y video link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>NOMBRE PROYECTO AQUI</title>
+<title>Proyecto de Grado Naomi O.</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -369,9 +369,16 @@
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
     <h2 class="w3-wide w3-center">Documentos de apoyo</h2>
     <p class="w3-opacity w3-center"><i></i></p>
-    <iframe width="700" height="400" src="https://www.youtube.com/embed/orJSJGHjBLI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <!-- <iframe width="700" height="400" src="https://www.youtube.com/embed/orJSJGHjBLI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+    <div style="position:relative;width:fit-content;height:fit-content;">
+      <a style="position:absolute;top:20px;right:1rem;opacity:0.8;" href="https://clipchamp.com/watch/HALytABA4X0?utm_source=embed&utm_medium=embed&utm_campaign=watch">
+          <img style="height:22px;" src="https://clipchamp.com/e.svg" alt="Made with Clipchamp" />
+      </a>
+      <iframe allowfullscreen style="border:none" src="https://clipchamp.com/watch/HALytABA4X0/embed" width="700" height="360"></iframe>
+    </div>
+    
     <p class="w3-opacity w3-center"><i>*</i></p>
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQrP71lV5q5A-KnHawPXF6DNvbOqi6-LsE2p_c-eZHcH0wdWNaReYVEZcFaAKTnuKfQsE55s91Hjg86/embed?start=false&loop=false&delayms=3000" frameborder="0" width="700" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTQAw5_WCoN8xPyNwdaZDtUABy6VFLvyzvdYAM0vvZuZNMU0HFGLwUmmM6jQ5hLvw/embed?start=false&loop=false&delayms=3000" frameborder="0" width="700" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
    </div>
 
   <!-- End Page Content -->
